--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <li><a href="#">Social accounts</a></li>
         </ul>
         <div class="top-btnn">
-            <a href="#" class="h-btn">Contact me</a>
+            <a href="https://www.gmail.com" class="h-btn">Contact me</a>
         </div>
     </header>
 
@@ -38,18 +38,18 @@
                 Hi, There!
             </h4>
             <h2>I'm <span class="input"> </span></h2>
-            <p>I am a full Stack developer, Data Scientist, Graphic Designer and Data Entry Specialist.
-                I use html, css, bootstrap and Javascript to develop websites. I also work with python 
-                and Nodejs for backend, app and game development. I use frameworks such as react and django.
-                I also use databases such as MySQL and Mongo Db to store data. I use corel draw and canva
-                for designing flyers, banners etc. I use microsoft offices such as microsoft word, microsoft excel,
+            <p>I am a Full Stack developer, UI/UX designer, Network Specialist and Data Entry Specialist.
+                I use html, css, react, javascript and bootstrap to develop websites. I also work with python 
+                and Nodejs for backend, app and game development. I use frameworks such as react and bootstrap.
+                I also use databases such as MySQL and Mongo Db to store data. As a product designer, I design products on figma 
+                and test the products using figma mirror. I use microsoft offices such as microsoft word, microsoft excel,
                 microsoft powerpoint for data entry jobs.
             </p>
                  <div class="social">
-                    <a href="#"><i class="ri-linkedin-box-fill"></i></a>
-                    <a href="#"><i class="ri-github-fill"></i></a>
-                    <a href="#"><i class="ri-medium-fill"></i></a>
-                    <a href="#"><i class="ri-codepen-line"></i></a>
+                    <a href="https://www.linkedin.com/in/stephanie-nnesochi-445b60262"><i class="ri-linkedin-box-fill"></i></a>
+                    <a href="https://github.com/Stephaniennesochi"><i class="ri-github-fill"></i></a>
+                    <a href="https://medium.com/@stephaniennesochi"><i class="ri-medium-fill"></i></a>
+                    <a href="https://codepen.io/Nnesochi"><i class="ri-codepen-line"></i></a>
                  </div>
 
                  <div class="main-btnn">
@@ -69,7 +69,7 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <script>
         var typed = new Typed(".input", {
-            strings:["Stephanie Nnesochi", " a Full Stack Developer", "a Data Scientist", "a Graphic Designer"," a Data Entry Specialist"],
+            strings:["Stephanie Nnesochi", " a Full Stack Developer", "a UI/UX Designer", "a Network Specialist "," a Data Entry Specialist"],
             typeSpeed:70,
             backSpeed:65,
             loop:true
